--- a/app/assets/stylesheets/components/_article.scss
+++ b/app/assets/stylesheets/components/_article.scss
@@ -1,5 +1,6 @@
 .article-page {
   background-color: #F5F6F8 !important;
+  margin-bottom: 50px;
 }
 
 .article-source {
@@ -9,7 +10,6 @@
 }
 
 .article-content {
-  margin: 150px;
   background: white;                         /* White background */
   padding: 40px;                             /* Internal space */
   border-radius: 4px;                        /* Small radius */
