--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,6 @@
  <%= simple_form_for @article do |f| %>
   <%= f.input :title %>
-  <%= f.input :content %>
+  <%= f.input :content, as: :text %>
   <!-- Add tags as a comma separated list -->
   <%= f.input :photo %>
   <%= f.input :photo_cache, as: :hidden %>
