--- a/app/views/cinemas/index.html.erb
+++ b/app/views/cinemas/index.html.erb
@@ -36,8 +36,8 @@
 
     <div class="row d-flex justify-content-center">
       <ul class="tabs">
-        <li class="btn btn-primary active liste-card"><a href="#tab1"></a>Voir la liste</li>
-        <li class="btn btn-primary active liste-card"><a href="#tab2"></a>Voir la carte</li>
+        <li class="btn btn-primary liste-card mr-3"><a href="#tab1"></a><i class="fas fa-list-ul mr-2"></i>Voir la liste</li>
+        <li class="btn btn-primary liste-card"><a href="#tab2"></a><i class="fas fa-map-marker-alt mr-2"></i>Voir la carte</li>
       </ul>
     </div>
 
