--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,31 +2,30 @@
             <div class="container">
               <div class="footer-100">
                 <div class="row">
-                    <div class="col-lg-4 col-sm-4 col-xs-12">
+                    <div class="col-12 col-lg-4">
                         <div class="single_footer">
-                            <h4>Ōma concept</h4>
+                            <h4>Ōma cinema</h4>
                             <ul>
-                                <li><a href="#">Lorem Ipsum</a></li>
-                                <li><a href="#">Simply dummy text</a></li>
-                                <li><a href="#">The printing and typesetting </a></li>
-                                <li><a href="#">Standard dummy text</a></li>
-                                <li><a href="#">Type specimen book</a></li>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Features</a></li>
+                                <li><a href="#">Architecture</a></li>
+                                <li><a href="#">Partners</a></li>
+                                <li><a href="#">Team members</a></li>
                             </ul>
                         </div>
                     </div><!--- END COL -->
-                    <div class="col-md-4 col-sm-4 col-xs-12">
+                    <div class="col-12 col-lg-4">
                         <div class="single_footer single_footer_address">
-                            <h4>Page Link</h4>
+                            <h4>Concept</h4>
                             <ul>
-                                <li><a href="#">Lorem Ipsum</a></li>
-                                <li><a href="#">Simply dummy text</a></li>
-                                <li><a href="#">The printing and typesetting </a></li>
-                                <li><a href="#">Standard dummy text</a></li>
-                                <li><a href="#">Type specimen book</a></li>
+                                <li><a href="#">What is Ōma ?</a></li>
+                                <li><a href="#">Experience</a></li>
+                                <li><a href="#">Contact</a></li>
+                                <li><a href="#">Press</a></li>
                             </ul>
                         </div>
                     </div><!--- END COL -->
-                    <div class="col-md-4 col-sm-4 col-xs-12">
+                    <div class="col-12 col-lg-4">
                         <div class="single_footer single_footer_address">
                             <h4>Subscribe today</h4>
                             <div class="signup_form">
@@ -38,7 +37,7 @@
                         </div>
                         <div class="social_profile">
                           <div>
-                            <ul>
+                            <ul class="d-flex justify-content-center pl-0">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
