--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -1,7 +1,7 @@
 .btn-primary {
   font-size: 20px;
   padding: 10px;
-  background-color: transparent;
+  background-color: $blue;
   border: 1px solid white;
   margin-top: 30px;
 }
@@ -9,4 +9,5 @@
 .btn-primary:hover {
   background-color:  white;
   color: $blue;
+  border: 1px solid $blue;
 }
