--- a/app/assets/stylesheets/components/_caroussel.scss
+++ b/app/assets/stylesheets/components/_caroussel.scss
@@ -13,6 +13,7 @@
   background-color: transparent;
   // box-shadow: 0px 12px 39px -19px rgba(0, 0, 0, 0.75);
   overflow: hidden;
+  padding-left: 7px !important;
 }
 .carousel-wrapper .carousel {
   position: absolute;
