--- a/app/views/pages/ōma.html.erb
+++ b/app/views/pages/ōma.html.erb
@@ -89,13 +89,34 @@
                   <p class="pt-4">The original configuration of this room also gives you the possibility to offer personalized services:</p>
                   <ul>
                     <div class="d-flex">
-                      <li class="pb-3 pt-4"><p class="my-auto"><i class="fas fa-home fa-2x"></i>Privatization of entire boxes</p></li>
+                      <li class="pb-3 pt-4 d-flex">
+                        <div>
+                          <i class="fas fa-home fa-2x mr-4"></i>
+                        </div>
+                        <div>
+                          <p>Privatization of entire boxes</p>
+                        </div>
+                      </li>
                     </div>
                     <div>
-                      <li class="pb-3"><p><i class="fas fa-user-friends fa-2x"></i>Advance booking of seats</p></li>
+                      <li class="pb-3 d-flex">
+                        <div>
+                          <i class="fas fa-user-friends fa-2x mr-4"></i>
+                        </div>
+                        <div>
+                          <p>Advance booking of seats</p>
+                        </div>
+                      </li>
                     </div>
                     <div>
-                      <li class="pb-3"><p><i class="fas fa-glass-martini fa-2x"></i>VIP tickets with exclusive access to lounge or bar</p></li>
+                      <li class="pb-3 d-flex">
+                        <div>
+                         <i class="fas fa-glass-martini fa-2x mr-4"></i>
+                        </div>
+                        <div>
+                          <p>VIP tickets with exclusive access to lounge or bar</p>
+                        </div>
+                      </li>
                     </div>
                   </ul>
               </div>
