--- a/app/views/cinemas/index.html.erb
+++ b/app/views/cinemas/index.html.erb
@@ -33,43 +33,42 @@
   </section><!-- cd-section -->
 
   <section id="section2" class="index-cinema">
-
-    <div class="row d-flex justify-content-center">
-      <ul class="tabs">
-        <li class="btn btn-primary liste-card mr-3"><a href="#tab1"></a><i class="fas fa-list-ul mr-2"></i>Voir la liste</li>
-        <li class="btn btn-primary liste-card"><a href="#tab2"></a><i class="fas fa-map-marker-alt mr-2"></i>Voir la carte</li>
-      </ul>
-    </div>
-
+      <div class="row d-flex justify-content-center">
+        <ul class="tabs">
+          <li class="btn btn-primary liste-card mr-3"><a href="#tab1"></a><i class="fas fa-list-ul mr-2"></i>Voir la liste</li>
+          <li class="btn btn-primary liste-card"><a href="#tab2"></a><i class="fas fa-map-marker-alt mr-2"></i>Voir la carte</li>
+        </ul>
+      </div>
 
 
-    <div class="article" id="tab1">
-      <% array = [] %>
-      <% @cinemas.each do |cinema| %>
-        <div class="cinema-card" style="background-image: linear-gradient(0.25turn, rgba(250,250,250,1), rgba(0,0,0,0.2)), url('<%= cl_image_path cinema.photo %>')">
-          <h2><%= link_to cinema.name, cinema_path(cinema) %></h2>
-          <p><%= cinema.address %></p>
-          <h3><%= link_to 'Détails', cinema_path(cinema) %></h3>
-          <br>
-          <% unless cinema.review_ids.empty? %>
-            <% nb_stars = cinema.reviews.average(:rating).round.to_i %>
-            <% nb_stars.times do %>
-              <span style="color: #191E55"><i class="fas fa-star"></i></span>
-            <% end %>
-            <% (5 - nb_stars).times do %>
-              <span style="color: #191E55"><i class="far fa-star"></i></span>
-            <% end %>
-            <p><%= cinema.reviews.count %> avis</p>
-            <% end %>
-        </div>
-      <% end %>
-    </div>
 
-    <div class="article" id="tab2">
-      <div id="map" style="width: 100%; height: 600px;" data-markers="<%= @markers.to_json %>"
-        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-      ></div>
-    </div>
+      <div class="article" id="tab1">
+        <% array = [] %>
+        <% @cinemas.each do |cinema| %>
+          <div class="cinema-card" style="background-image: linear-gradient(0.25turn, rgba(250,250,250,1), rgba(0,0,0,0.2)), url('<%= cl_image_path cinema.photo %>')">
+            <h2><%= link_to cinema.name, cinema_path(cinema) %></h2>
+            <p><%= cinema.address %></p>
+            <h3><%= link_to 'Détails', cinema_path(cinema) %></h3>
+            <br>
+            <% unless cinema.review_ids.empty? %>
+              <% nb_stars = cinema.reviews.average(:rating).round.to_i %>
+              <% nb_stars.times do %>
+                <span style="color: #191E55"><i class="fas fa-star"></i></span>
+              <% end %>
+              <% (5 - nb_stars).times do %>
+                <span style="color: #191E55"><i class="far fa-star"></i></span>
+              <% end %>
+              <p><%= cinema.reviews.count %> avis</p>
+              <% end %>
+          </div>
+        <% end %>
+      </div>
+
+      <div class="article d-flex justify-content-center" id="tab2">
+        <div id="map" style="width: 80%; height: 600px;" data-markers="<%= @markers.to_json %>"
+          data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+        ></div>
+      </div>
 
   </section>
 
