--- a/app/views/cinemas/show.html.erb
+++ b/app/views/cinemas/show.html.erb
@@ -24,8 +24,8 @@
       <div class="article-content flex-column justify-content-center text-left col-12 col-lg-12 ml-5 mt-5">
         <h1>Avis</h1>
         <% @reviews.each do |review| %>
-        <h4><%= review.user_name %></h4>
-         <% unless review.rating.nil? %>
+        <h4 style="color: tomato" class="mb-3"><%= review.user_name %></h4>
+         <h5 style="color: #191E55" class="mb-5"><% unless review.rating.nil? %>
               <% nb_stars = review.rating.round.to_i %>
               <% nb_stars.times do %>
                 <span style="color: #191E55"><i class="fas fa-star"></i></span>
@@ -34,8 +34,7 @@
                 <span style="color: #191E55"><i class="far fa-star"></i></span>
               <% end %>
              <% end %>
-          <%= review.content %>
-          <p class="tiret mt-3"></p>
+          <%= review.content %></h5>
 
         <% end %>
       </div>
@@ -43,7 +42,9 @@
     <div class="col-12 col-lg-3 ml-5 article-annexe">
       <div class="sticky-top">
         <div class="article-content mb-5 article-tag">
-          <a href="cinema.url_cinema">Réserver</a>
+          <div>
+            <a href="cinema.url_cinema">Réserver</a>
+          </div>
           <!-- <h2><%#= link_to 'Laisser un avis', new_cinema_review_path(@cinema) %></h2> -->
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
             Laissez un avis
@@ -73,10 +74,11 @@
       </div>
       <div class="modal-body">
         <%= simple_form_for [@cinema, @review] do |f| %>
-        <%= f.input :content %>
+        <%= f.input :content, placeholder: "Votre commentaire" %>
+        <p>Notez votre expérience:</p>
         <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience"%>
-        <%= f.input :user_name %>
-        <%= f.submit "add a review", class: "btn btn-primary" %>
+        <%= f.input :user_name, placeholder: "Votre nom" %>
+        <%= f.submit "Valider", class: "btn btn-primary" %>
       <% end %>
       </div>
     </div>
