--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -23,8 +23,8 @@
         <h1 class="lg-12">Contact</h1>
         <br>
         <br>
-        <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
       </div>
+      <img src="../assets/carre_gris.png" alt="croix" class="carre-gris-contact">
       <div class=" row d-flex justify-content-between mx-5 px-5 my-5">
         <div class="contact-info col-12 col-lg-6 text-left">
           <img src="../assets/logo.png" alt="logo">
@@ -32,7 +32,8 @@
           <h3>75009 Paris</h3>
           <h3>France</h3>
           <h4>+33 1 42 00 11 24</h4>
-          <h4 class="pb-5">nchican@omacinema.com</h4>
+          <h4>nchican@omacinema.com</h4>
+          <a href="#section2" class="cd-scroll-down btn-primary btn mb-5">Contact Us</a>
         </div>
         <div id="map1" class="col-12 col-lg-6"  style="width: 500px; height: 300px;" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
         </div>
