--- a/app/views/pages/experience.html.erb
+++ b/app/views/pages/experience.html.erb
@@ -44,7 +44,7 @@
   <section id="section1" class="cd-section home1">
     <div class="section">
     <h1>Experience</h1>
-    <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
+    <a href="#section2"><i class="fas fa-chevron-down fa-3x"></i></a>
     </div>
   </section><!-- cd-section -->
 
