--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -2,7 +2,6 @@
   .btn {
     width: 100%;
     padding: 10px;
-    font-weight: bold;
   }
   h1 {
     padding-bottom: 30px;
@@ -37,4 +36,11 @@
   height: 6rem;
   font-size: 20px;
   color: $blue;
+  border-radius: 0px;
+}
+
+.simple_form {
+  .btn {
+    border-radius: 0px;
+  }
 }
