--- a/app/views/cinemas/index.html.erb
+++ b/app/views/cinemas/index.html.erb
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="row flex-column">
         <h1>Location</h1>
-        <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
+        <a href="#section2"><i class="fas fa-chevron-down fa-3x"></i></a>
       </div>
     </div>
   </section><!-- cd-section -->
@@ -40,26 +40,27 @@
         </ul>
       </div>
 
-
-
       <div class="article" id="tab1">
         <% array = [] %>
         <% @cinemas.each do |cinema| %>
-          <div class="cinema-card" style="background-image: linear-gradient(0.25turn, rgba(250,250,250,1), rgba(0,0,0,0.2)), url('<%= cl_image_path cinema.photo %>')">
-            <h2><%= link_to cinema.name, cinema_path(cinema) %></h2>
-            <p><%= cinema.address %></p>
-            <h3><%= link_to 'Détails', cinema_path(cinema) %></h3>
-            <br>
-            <% unless cinema.review_ids.empty? %>
-              <% nb_stars = cinema.reviews.average(:rating).round.to_i %>
-              <% nb_stars.times do %>
-                <span style="color: #191E55"><i class="fas fa-star"></i></span>
-              <% end %>
-              <% (5 - nb_stars).times do %>
-                <span style="color: #191E55"><i class="far fa-star"></i></span>
-              <% end %>
-              <p><%= cinema.reviews.count %> avis</p>
-              <% end %>
+          <div class="cinema-card d-flex justify-content-between">
+            <div class="cinema-card-info">
+              <h2><%= link_to cinema.name, cinema_path(cinema) %></h2>
+              <p><%= cinema.address %></p>
+              <h3><%= link_to 'Détails', cinema_path(cinema) %></h3>
+              <br>
+              <% unless cinema.review_ids.empty? %>
+                <% nb_stars = cinema.reviews.average(:rating).round.to_i %>
+                <% nb_stars.times do %>
+                  <span style="color: #191E55"><i class="fas fa-star"></i></span>
+                <% end %>
+                <% (5 - nb_stars).times do %>
+                  <span style="color: #191E55"><i class="far fa-star"></i></span>
+                <% end %>
+                <p><%= cinema.reviews.count %> avis</p>
+                <% end %>
+            </div>
+              <%= cl_image_tag cinema.photo %>
           </div>
         <% end %>
       </div>
