--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,12 +42,14 @@
   <a class="cd-nav-trigger cd-img-replace">Open navigation<span></span></a>
 
   <section id="section1" class="cd-section home1">
-    <div class="container">
-      <div class="row justify-content-center">
+    <div class="container justify-content-center">
+      <div class="row text-left">
         <div class="col-12">
-          <h1>Ōma Cinema concept</h1>
-          <a href="#section2" class="cd-scroll-down cd-img-replace">scroll down</a>
-          </div>
+          <h1 style="font-size: 100px; font-weight: bold;">Ōma Vertical <br> Cinema concept</h1>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <a href="#section2" class="cd-scroll-down"><i class="fas fa-chevron-down fa-3x"></i></a>
       </div>
     </div>
   </section><!-- cd-section -->
@@ -92,6 +94,7 @@
 
   <section id="section5" class="cd-section home5">
     <div class="container">
+        <img src="../assets/croix_noire.png" alt="croix" class="croix_noire">
       <div class="row">
         <div class="col-lg-6">
         </div>
@@ -111,7 +114,6 @@
       <div class="row justify-content-center mt-5 pt-5">
         <div class="col-12 col-lg-6 p-5 d-flex align-items-flex-end">
           <div>
-            <img src="../assets/croix_noire.png" alt="croix" class="croix_noire">
             <h1>Pierre Chican, Architect</h1>
             <p>Specialized in the realization of cultural arenas and more particularly of cinemas for more than 20 years now, Pierre Chican designed two of the most successful cinema theaters in France : UGC Les Halles (4.5 million tickets sold in 2016) & UGC Bercy (3 million tickets sold in 2016) in Paris and many others projects in France (Pathé La Valette with the first IMAX laser cinema in France) and abroad.</p>
             <img src="../assets/grand_carre.png" alt="croix" class="grand_carre">
@@ -119,7 +121,6 @@
         </div>
         <div class="col-12 col-lg-6 p-5 d-flex align-items-flex-end">
           <div>
-            <img src="../assets/croix_grise.png" alt="croix" class="croix_grise_team">
             <h1>Nicolas Chican, Business Partner</h1>
             <p>Nicolas Chican has a Master in Science of Management at EM LYON Business School. He majored in Services Marketing and developed strong skills in the entertainment and tourism industry. During his studies, Nicolas worked on a revenue management oriented solution for cinema tickets.</p>
             <img src="../assets/carre_gris.png" alt="croix" class="carre_gris">
