--- a/app/views/pages/ōma.html.erb
+++ b/app/views/pages/ōma.html.erb
@@ -45,7 +45,7 @@
     <div class="container justify-content-center">
       <div class="row justify-content-center">
         <h1>What is Ōma</h1>
-        <a href="#section2" class="cd-scroll-down cd-img-replace"><i class="fas fa-chevron-down fa-3x"></i></a>
+        <a href="#section2"><i class="fas fa-chevron-down fa-3x"></i></a>
       </div>
     </div>
   </section><!-- cd-section -->
