--- a/app/assets/stylesheets/components/_deco.scss
+++ b/app/assets/stylesheets/components/_deco.scss
@@ -19,6 +19,11 @@
     opacity: 0.6;
 }
 
+.croix_grise:hover {
+  transform: rotate(360deg);
+  transition: all 0.3s ease-in-out 0s;
+}
+
 .croix_noire {
   position: relative;
   height: 70px;
@@ -26,6 +31,11 @@
   bottom: 25%;
   z-index: 0;
   opacity: 0.5;
+}
+
+.croix_noire:hover {
+  transform: rotate(360deg);
+  transition: all 0.3s ease-in-out 0s;
 }
 
 .grand_carre {
