--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,7 +12,8 @@
         <p class='mb-5'>
           <%= cl_image_tag @article.photo, width: 800, crop: :fill %>
         </p>
-        <h3 class="text-justify"><%= @article.content %></h3>
+        <h3 class="text-justify"><%= raw @article.content %></h3>
+
     </div>
     <div class="col-12 col-lg-3 ml-5 article-annexe">
       <div class="sticky-top">
