--- a/app/assets/stylesheets/components/_articles.scss
+++ b/app/assets/stylesheets/components/_articles.scss
@@ -3,3 +3,9 @@
   background-size: cover;
   padding: 0px !important;
 }
+
+.article-list {
+  list-style: none;
+  width: 100%;
+  font-size: 25px;
+}
