--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -81,7 +81,7 @@
         <div class="unforget col-12 col-lg-6">
           <h1>AN UNFORGETTABLE EXPERIENCE</h1>
           <p>Much more than just the spectacular nature of the architecture, the original configuration of the room has been designed to offer viewers an exceptional audio and visual experience, projecting an image free of any distortion. Ōma is an experience that you will never forget.</p>
-          <img src="../assets/croix_grise.png" alt="croix" class="croix_grise">
+          <a href="/experience"><img src="../assets/croix_grise.png" alt="croix" class="croix_grise"></a>
         </div>
       </div>
     </div>
@@ -103,7 +103,7 @@
 
   <section id="section5" class="cd-section home5">
     <div class="container">
-        <img src="../assets/croix_noire.png" alt="croix" class="croix_noire">
+      <a href="/architecture"><img src="../assets/croix_noire.png" alt="croix" class="croix_noire"></a>
       <div class="row">
         <div class="col-lg-6">
         </div>
@@ -142,7 +142,7 @@
   <section id="section7" class="cd-section">
       <div class="container flex-column justify-content-center">
     <div class="row flex-column">
-      <h1 class="pb-5" style="color: $blue !important;">Press Articles</h1>
+      <h1 class="pb-5 article-home" style="color: $blue !important;">Press Articles</h1>
     </div>
 
     <div class="row d-flex justify-content-center align-items-center mt-5" style=" height: 28%">
