--- a/app/assets/stylesheets/components/_articles.scss
+++ b/app/assets/stylesheets/components/_articles.scss
@@ -8,4 +8,11 @@
   list-style: none;
   width: 100%;
   font-size: 25px;
+  a {
+    color: white;
+  }
+}
+
+.article-list a:hover {
+  color: tomato;
 }
