--- a/app/assets/stylesheets/components/_caroussel.scss
+++ b/app/assets/stylesheets/components/_caroussel.scss
@@ -6,7 +6,7 @@
 .carousel-wrapper {
   position: relative;
   width: 70%;
-  height: 100%;
+  height: 107%;
   top: 36%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -46,8 +46,20 @@
   align-items: center;
 }
 
+.flickity-prev-next-button {
+  position: relative !important;
+  background-color: transparent !important;
+  background: none !important;
+}
 
 
+.flickity-prev-next-button.next {
+  right: -20px !important;
+}
+
+.flickity-prev-next-button.previous {
+  left: -20px !important;
+}
 
 .carousel-wrapper .carousel .carousel-cell .more:hover, .carousel-wrapper .carousel .carousel-cell .more:active, .carousel-wrapper .carousel .carousel-cell .more:visited, .carousel-wrapper .carousel .carousel-cell .more:focus {
   color: #CFCFCF;
